crates/toml_edit/tests/snapshots/invalid/key/after-table.stderr
TOML parse error at line 1, column 9
  |
1 | [error] this = "should not be here"
  |         ^
unexpected key or value, expected newline, `#`
